Changed terminal-grotesque_open.otf to fonts/terminal-grotesque_open.otf

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
         @font-face {
             font-family: cyberpunk;
-            src: url(terminal-grotesque_open.otf);
+            src: url(fonts/terminal-grotesque_open.otf);
         }
         h1{
             font-family: 'cyberpunk'
