Linked 'style.css'

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Yeon+Sung&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
