--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                 <a href="https://i.redd.it/5vccgghvcpt21.png" target="_blank" class="text-blue-800" id="vyas">Vyas Giri</a>
             </div>
             <a class="hover:bg-white rounded-lg" href="https://github.com/vyas-giri" target="_blank">
-                <img class="h-10" onmouseout="this.src='icons/github-mark-white.png';" onmouseover="this.src='icons/github-mark.png';" alt="github">
+                <img class="h-10" src='icons/github-mark-white.png' onmouseout="this.src='icons/github-mark-white.png';" onmouseover="this.src='icons/github-mark.png';" alt="github">
             </a>
             <a class="hover:bg-white rounded-lg p-1" href="https://twitter.com/VyasGiri3" target="_blank">
-                <img class="h-8" onmouseout="this.src='icons/twitter_black.png';" onmouseover="this.src='icons/twitter.png';" alt="twitter">
+                <img class="h-8" src='icons/twitter_black.png' onmouseout="this.src='icons/twitter_black.png';" onmouseover="this.src='icons/twitter.png';" alt="twitter">
             </a>
-            <a class="hover:bg-white rounded-lg" href="https://www.linkedin.com/in/vyas-giri-ba1616225/" target="_blank"><img class="h-8" onmouseout="this.src='icons/In-White-48.png';" onmouseover="this.src='icons/In-Blue-48.png';" alt="linkedin"></a>
-            <a class="hover:bg-white rounded-lg p-1" href="https://www.instagram.com/vyas_kun/" target="_blank"><img class="h-8" onmouseout="this.src='icons/Instagram_Glyph_Black.png';" onmouseover="this.src='icons/Instagram_Glyph_Gradient.png';" alt="instagram"></a>
+            <a class="hover:bg-white rounded-lg" href="https://www.linkedin.com/in/vyas-giri-ba1616225/" target="_blank"><img class="h-8" src='icons/In-White-48.png' onmouseout="this.src='icons/In-White-48.png';" onmouseover="this.src='icons/In-Blue-48.png';" alt="linkedin"></a>
+            <a class="hover:bg-white rounded-lg p-1" href="https://www.instagram.com/vyas_kun/" target="_blank"><img class="h-8" src='icons/Instagram_Glyph_Black.png' onmouseout="this.src='icons/Instagram_Glyph_Black.png';" onmouseover="this.src='icons/Instagram_Glyph_Gradient.png';" alt="instagram"></a>
         </div>
         <div class="left space-y-5 p-5">
             <h1 class="font-bold text-5xl text-cyan-500 flex items-center" id="heading">Hello there <img class="h-24 rounded-full p-4" src="gifs/kakashi-kakashi-hatake.gif" alt="kakashihello"></h1>
@@ -65,8 +65,10 @@
             <p class="para text-2xl flex items-center text-emerald-200"><img class="h-12 p-2" src="icons/email.png" alt="email"> vyasgiri@duck.com</p>
         </div>
         <div class="right -mt-16"><a href="https://anilist.co/user/ProMan25/" target="_blank">
-            <img class="rounded-full w-40 p-5 mt-10" src="gifs/persona5-lain.gif" alt="gif"></a><p class="para opacity-30 mb-60">I love to watch anime too</p>
-            <button class="border-2 rounded-xl text-white border-black mt-64 mr-3 hover:text-emerald-200 px-1" id="font_button" onclick="font_change()">Click to change font</button>
+            <img class="rounded-full w-40 p-5 mt-10" src="gifs/persona5-lain.gif" alt="gif"></a><p class="para mb-60">I love to watch anime too</p>
+            <!-- <button class="border-2 rounded-xl text-white border-black mt-64 mr-3 hover:text-emerald-200 px-1" id="font_button" onclick="font_change()">Click to change font</button>
+            <button id="btn" class="text-white" onclick="displayDetails()">Click to show spotify details</button>
+            <p id="spotifyInfo">Currently offline</p> -->
         </div>
     </div>
 </body>
